--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,23 @@ option(GLFW_BUILD_DOCS OFF)
 option(GLFW_BUILD_EXAMPLES OFF)
 option(GLFW_BUILD_TESTS OFF)
 
-add_executable(Engine engine/main.cpp)
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+    if(MSVC)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
+    else()
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic")
+    endif()
+    add_compile_definitions(MARZANNA_DEBUG)
+else()
+    add_compile_definitions(MARZANNA_NODEBUG)
+endif()
 
+file(GLOB_RECURSE SOURCES engine/src/*.cpp)
+
+add_executable(${PROJECT_NAME} ${SOURCES})
+
+target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
+
+target_include_directories(${PROJECT_NAME} PUBLIC
+    vendor/spdlog/include
+)
