--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "vendor/spdlog"]
-	path = vendor/spdlog
+[submodule "engine/vendor/spdlog"]
+	path = engine/vendor/spdlog
 	url = https://github.com/gabime/spdlog
