--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,29 +1,9 @@
-﻿
-cmake_minimum_required (VERSION 3.8)
+﻿cmake_minimum_required(VERSION 3.20)
+project(MarzannaDemo LANGUAGES CXX)
 
-project ("Marzanna")
+add_executable(demo)
+target_sources(demo PRIVATE "demo.cpp")
+target_include_directories(demo PRIVATE engine/vendor/spdlog/include "${PROJECT_SOURCE_DIR}")
+add_subdirectory("engine")
+install(TARGETS demo)
 
-option(GLFW_BUILD_DOCS OFF)
-option(GLFW_BUILD_EXAMPLES OFF)
-option(GLFW_BUILD_TESTS OFF)
-
-if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-    if(MSVC)
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
-    else()
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic")
-    endif()
-    add_compile_definitions(MARZANNA_DEBUG)
-else()
-    add_compile_definitions(MARZANNA_NODEBUG)
-endif()
-
-file(GLOB_RECURSE SOURCES engine/src/*.cpp)
-
-add_executable(${PROJECT_NAME} ${SOURCES})
-
-target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
-
-target_include_directories(${PROJECT_NAME} PUBLIC
-    engine/vendor/spdlog/include
-)
