--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,34 @@
 ﻿cmake_minimum_required(VERSION 3.20)
+
+MACRO(ADD_MSVC_PRECOMPILED_HEADER PrecompiledHeader PrecompiledSource SourcesVar)
+  IF(MSVC)
+    GET_FILENAME_COMPONENT(PrecompiledBasename ${PrecompiledHeader} NAME_WE)
+    SET(PrecompiledBinary "${CMAKE_CURRENT_BINARY_DIR}/${PrecompiledBasename}.pch")
+    SET(Sources ${${SourcesVar}})
+
+    SET_SOURCE_FILES_PROPERTIES(${PrecompiledSource}
+                                PROPERTIES COMPILE_FLAGS "/Yc\"${PrecompiledHeader}\" /Fp\"${PrecompiledBinary}\""
+                                           OBJECT_OUTPUTS "${PrecompiledBinary}")
+    SET_SOURCE_FILES_PROPERTIES(${Sources}
+                                PROPERTIES COMPILE_FLAGS "/Yu\"${PrecompiledHeader}\" /FI\"${PrecompiledHeader}\" /Fp\"${PrecompiledBinary}\""
+                                           OBJECT_DEPENDS "${PrecompiledBinary}")  
+    # Add precompiled header to SourcesVar
+    LIST(APPEND ${SourcesVar} ${PrecompiledSource})
+  ENDIF(MSVC)
+ENDMACRO(ADD_MSVC_PRECOMPILED_HEADER)
+
 project(MarzannaDemo LANGUAGES CXX)
 
 add_executable(demo)
 target_sources(demo PRIVATE "demo.cpp")
-target_include_directories(demo PRIVATE engine/vendor/spdlog/include "${PROJECT_SOURCE_DIR}")
+
+ADD_MSVC_PRECOMPILED_HEADER("precompiled.h" "precompiled.cpp" "engine/src/mzpch.h")
+
+target_include_directories(demo PRIVATE 
+    engine/vendor/spdlog/include 
+    "${PROJECT_SOURCE_DIR}"
+)
+
 add_subdirectory("engine")
 install(TARGETS demo)
 
