add glfw to project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 ﻿cmake_minimum_required(VERSION 3.20)
 
+# Precompile headers macro
 MACRO(ADD_MSVC_PRECOMPILED_HEADER PrecompiledHeader PrecompiledSource SourcesVar)
   IF(MSVC)
     GET_FILENAME_COMPONENT(PrecompiledBasename ${PrecompiledHeader} NAME_WE)
@@ -19,16 +20,36 @@ ENDMACRO(ADD_MSVC_PRECOMPILED_HEADER)
 
 project(MarzannaDemo LANGUAGES CXX)
 
-add_executable(demo)
-target_sources(demo PRIVATE "demo.cpp")
+add_subdirectory(engine/vendor/glfw)
+
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+    if(MSVC)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
+    else()
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic")
+    endif()
+    add_compile_definitions(MZ_DEBUG)
+else()
+    add_compile_definitions(MZ_NODEBUG)
+endif()
+
+option(GLFW_BUILD_DOCS OFF)
+option(GLFW_BUILD_EXAMPLES OFF)
+option(GLFW_BUILD_TESTS OFF)
 
 ADD_MSVC_PRECOMPILED_HEADER("precompiled.h" "precompiled.cpp" "engine/src/mzpch.h")
 
+add_executable(demo)
+target_sources(demo PRIVATE "demo.cpp")
+
 target_include_directories(demo PRIVATE 
     engine/vendor/spdlog/include 
+    engine/vendor/glfw/include
     "${PROJECT_SOURCE_DIR}"
 )
 
-add_subdirectory("engine")
-install(TARGETS demo)
+target_link_libraries(demo PRIVATE glfw)
 
+add_subdirectory("engine")
+
+install(TARGETS demo)
