include stbimage in project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ target_sources(demo PRIVATE "demo.cpp")
 target_include_directories(demo PRIVATE 
     engine/vendor/spdlog/include 
     engine/vendor/glfw/include
+    engine/vendor/stb
     glm::glm
     "${PROJECT_SOURCE_DIR}"
     ${Vulkan_INCLUDE_DIRS}
