--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "engine/vendor/stb"]
 	path = engine/vendor/stb
 	url = https://github.com/nothings/stb
+[submodule "engine/vendor/tinyobjloader"]
+	path = engine/vendor/tinyobjloader
+	url = https://github.com/tinyobjloader/tinyobjloader
